force-app/main/default/objects/QBD_Online_Office_ID__c/QBD_Online_Office_ID__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store the QBD Online Office ID, which will be assigned to &quot;Key Contact Office ID&quot; on Product Registration.</description>
    <label>QBD Online Office ID</label>
</CustomObject>