force-app/main/default/objects/QBD_Online_Office_ID__c/fields/GDS_QBR_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>GDS_QBR_Discount_Code__c</fullName>
    <description>Indirect Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indirect Code</inlineHelpText>
    <label>GDS QBR Discount Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>