force-app/main/default/objects/QBD_Online_Office_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Key_Contact_Office_ID__c</columns>
    <columns>Qantas_Club_Discount_Code__c</columns>
    <columns>GDS_QBR_Discount_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>